--- a/index.html
+++ b/index.html
@@ -167,14 +167,9 @@
 									<ul>
 										<li><a href="index.html">Homepage 主页</a></li>
 										<li>
-											<span class="opener">JVM</span>
+											<span class="opener">Java</span>
 											<ul>
-												<li><a href="notebook/jvm/01_类加载子系统.html">01 类加载子系统</a></li>
-												<li><a href="notebook/jvm/02_运行时数据区概述及线程.html">02 运行时数据区概述及线程</a></li>
-												<li><a href="notebook/jvm/03_程序计数器.html">03 程序计数器</a></li>
-												<li><a href="notebook/jvm/04_虚拟机栈.html">04 虚拟机栈</a></li>
-												<li><a href="notebook/jvm/05_本地方法接口.html">05 本地方法接口</a></li>
-												<li><a href="notebook/jvm/06_本地方法栈.html">06 本地方法栈</a></li>
+												<li><a href="menuPages/jvm.html">Java虚拟机</a></li>
 											</ul>
 										</li>
 									</ul>
