--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
 									</div>
 								</section>
 
+							<!-- Footer -->
+							<footer id="footer">
+								<p class="copyright">Copyright ©2022 ZhangYi, All Rights Reserved.</p>
+							</footer>
+
 						</div>
 					</div>
 
@@ -165,11 +170,82 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage 主页</a></li>
+										<li><a href="index.html">INTRODUCTION 简介</a></li>
+										<li>
+											<span class="opener">操作系统</span>
+											<ul>
+											</ul>
+										</li>
+
+										<li>
+											<span class="opener">计算机网络</span>
+											<ul>
+											</ul>
+										</li>
+
+										<li>
+											<span class="opener">数据库</span>
+											<ul>
+											</ul>
+										</li>
+
+										<li>
+											<span class="opener">LINUX操作系统</span>
+											<ul>
+											</ul>
+										</li>
+
+										<li>
+											<span class="opener">Redis缓存</span>
+											<ul>
+											</ul>
+										</li>
+
+										<li>
+											<span class="opener">.Net平台</span>
+											<ul>
+												<li><a href="#">C#基础</a></li>
+											</ul>
+										</li>
+
 										<li>
 											<span class="opener">Java</span>
 											<ul>
-												<li><a href="menuPages/jvm.html">Java虚拟机</a></li>
+												<li><a href="#">Java基础</a></li>
+												<li><a href="#">JavaWeb</a></li>
+												<li><a href="#">Java集合</a></li>
+												<li><a href="#">Java并发</a></li>
+												<li><a href="menuPages/java_jvm.html">Java虚拟机</a></li>
+
+											</ul>
+										</li>
+
+										<li>
+											<span class="opener">Mybatis</span>
+											<ul>
+											</ul>
+										</li>
+
+										<li>
+											<span class="opener">Docker</span>
+											<ul>
+											</ul>
+										</li>
+
+										<li>
+											<span class="opener">Spring 框架</span>
+											<ul>
+												<li><a href="#">Spring5</a></li>
+												<li><a href="#">Spring MVC</a></li>
+												<li><a href="#">SpringBoot2</a></li>
+											</ul>
+										</li>
+
+										<li>
+											<span class="opener">Leetcode 力扣</span>
+											<ul>
+												<li><a href="#">题库</a></li>
+												<li><a href="#">周赛</a></li>
 											</ul>
 										</li>
 									</ul>
@@ -219,13 +295,9 @@
 									</ul>
 								</section>
 
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">Copyright ©2022 ZhangYi, All Rights Reserved.</p>
-								</footer>
-
 						</div>
 					</div>
+
 
 			</div>
 
