--- a/menuPages/java_jvm.html
+++ b/menuPages/java_jvm.html
@@ -17,7 +17,11 @@
 
             <!-- Header -->
             <header id="header">
-                <a href="../index.html" class="logo"><strong>Home</strong> ZhangYi</a>
+                <ul class="actions small">
+                    <li><a href="../index.html" class="button primary small">BACK</a></li>
+                    <li><a href="#" class="logo"><strong>ZhangYi</strong></a></li>
+                </ul>
+
             </header>
 
             <!-- Banner -->
