--- a/index.html
+++ b/index.html
@@ -244,8 +244,7 @@
 										<li>
 											<span class="opener">Leetcode 力扣</span>
 											<ul>
-												<li><a href="#">题库</a></li>
-												<li><a href="#">周赛</a></li>
+												<li><a href="menuPages/leetcode_problemset.html">题库</a></li>
 											</ul>
 										</li>
 									</ul>
