04 C# 判断与循环

--- a/menuPages/point_net_C#base.html
+++ b/menuPages/point_net_C#base.html
@@ -69,6 +69,14 @@
                             <li><a href="../notebook/C%23_base/C%23常量.html" class="button" target="_blank">More</a></li>
                         </ul>
                     </article>
+
+                    <article>
+                        <h3>04 C# 判断与循环</h3>
+                        <p></p>
+                        <ul class="actions">
+                            <li><a href="../notebook/C%23_base/C%23判断与循环.html" class="button" target="_blank">More</a></li>
+                        </ul>
+                    </article>
                 </div>
             </section>
 
