--- a/menuPages/point_net_C#base.html
+++ b/menuPages/point_net_C#base.html
@@ -77,6 +77,22 @@
                             <li><a href="../notebook/C%23_base/C%23判断与循环.html" class="button" target="_blank">More</a></li>
                         </ul>
                     </article>
+
+                    <article>
+                        <h3>05 C# 可空类型</h3>
+                        <p></p>
+                        <ul class="actions">
+                            <li><a href="../notebook/C%23_base/C%23可空类型.html" class="button" target="_blank">More</a></li>
+                        </ul>
+                    </article>
+
+                    <article>
+                        <h3>06 C# 访问修饰符</h3>
+                        <p></p>
+                        <ul class="actions">
+                            <li><a href="../notebook/C%23_base/C%23%20访问修饰符.html" class="button" target="_blank">More</a></li>
+                        </ul>
+                    </article>
                 </div>
             </section>
 
