--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 										<li>
 											<span class="opener">数据库</span>
 											<ul>
+												<li><a href="menuPages/db_base.html">数据库基础</a></li>
 											</ul>
 										</li>
 
