--- a/menuPages/point_net_C#base.html
+++ b/menuPages/point_net_C#base.html
@@ -93,6 +93,22 @@
                             <li><a href="../notebook/C%23_base/C%23%20访问修饰符.html" class="button" target="_blank">More</a></li>
                         </ul>
                     </article>
+
+                    <article>
+                        <h3>07 C# 类和结构体</h3>
+                        <p></p>
+                        <ul class="actions">
+                            <li><a href="../notebook/C%23_base/C%23类和结构体.html" class="button" target="_blank">More</a></li>
+                        </ul>
+                    </article>
+
+                    <article>
+                        <h3>08 C# SqlServer</h3>
+                        <p></p>
+                        <ul class="actions">
+                            <li><a href="../notebook/C%23_base/C%23SqlServer.html" class="button" target="_blank">More</a></li>
+                        </ul>
+                    </article>
                 </div>
             </section>
 
