--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Blog</title>
+		<title>YiBlog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 	</head>
 	<body class="is-preload">
 
@@ -22,13 +24,9 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Blog</strong>  ZhangYi</a>
+									<a href="index.html" class="logo"><strong>ZhangYi</strong></a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="https://github.com/zhyi930" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 								</header>
 
@@ -36,7 +34,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Blog</h1>
+											<h1>YiBlog</h1>
 											<p>A free and fully responsive site template</p>
 										</header>
 										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
@@ -45,7 +43,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/pic12.jpeg" alt="" />
 									</span>
 								</section>
 
@@ -167,10 +165,9 @@
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<h2>Menu</h2>
+										<h2>目录</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">INTRODUCTION 简介</a></li>
 										<li>
 											<span class="opener">操作系统</span>
 											<ul>
@@ -281,7 +278,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Get in touch</h2>
+										<h2>联系方式</h2>
 									</header>
 									<!--
 										<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
