--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 										<li>
 											<span class="opener">计算机网络</span>
 											<ul>
+												<li><a href="menuPages/net_security_protocol.html">网络安全协议</a></li>
 											</ul>
 										</li>
 
@@ -190,6 +191,7 @@
 										<li>
 											<span class="opener">LINUX操作系统</span>
 											<ul>
+												<li><a href="menuPages/linux-base.html">Linux基础</a></li>
 											</ul>
 										</li>
 
