--- a/menuPages/linux-base.html
+++ b/menuPages/linux-base.html
@@ -53,6 +53,14 @@
               <li><a href="../notebook/linux/第零章-vivim编辑器.html" class="button" target="_blank">More</a></li>
             </ul>
           </article>
+
+          <article>
+            <h3>第01章 Linux概要</h3>
+            <p></p>
+            <ul class="actions">
+              <li><a href="../notebook/linux/第一章-Linux概要.html" class="button" target="_blank">More</a></li>
+            </ul>
+          </article>
         </div>
       </section>
 
