--- a/menuPages/linux-base.html
+++ b/menuPages/linux-base.html
@@ -61,6 +61,14 @@
               <li><a href="../notebook/linux/第一章-Linux概要.html" class="button" target="_blank">More</a></li>
             </ul>
           </article>
+
+          <article>
+            <h3>第02章 网络配置</h3>
+            <p></p>
+            <ul class="actions">
+              <li><a href="../notebook/linux/第二章-网络配置.html" class="button" target="_blank">More</a></li>
+            </ul>
+          </article>
         </div>
       </section>
 
